@@ -10,6 +10,7 @@ Fixes
 - TransformTools : Fixed rare crash triggered by selecting multiple objects.
 - Floating Editors : Fixed keyboard shortcuts (#3632).
 - ArnoldTextureBake :  Fixed imbalanced distribution of work among tasks when some UDIMs contain many more objects than others.
+- Spreadsheet : Fixed scrollbar flickering in Spreadsheets with two rows (#3628).
 
 0.55.5.1 (relative to 0.55.5.0)
 ========
